# jax-cmb-pipeline

./: .gitignore  config.yaml  extract_tt_spectra_from_plik_lite.ipynb  main.py  planck_simple_nuts.ipynb  pyproject.toml
jax_cmb_pipeline/: __init__.py  data_loading.py  emulator.py  inference.py  likelihood.py  plotting.py  priors.py
notebooks/: spt_candl_nuts.ipynb
outputs/: nested_samples.csv  samples.npz  summary.txt
