[project]
name = "jax-cmb-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blackjax",
    "cosmopower-jax",
    "getdist",
    "jax[cuda13]",
    "matplotlib",
    "numpy",
]

[dependency-groups]
dev = []

[tool.uv.sources]
cosmopower-jax = { git = "https://github.com/dpiras/cosmopower-jax" }
blackjax = { git = "https://github.com/handley-lab/blackjax", rev = "nested_sampling" }
