[project]
name = "jax-cmb-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anesthetic",
    "blackjax",
    "cosmopower-jax",
    "jax[cuda13]",
    "matplotlib",
    "numpy",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = []

[tool.uv.sources]
cosmopower-jax = { git = "https://github.com/dpiras/cosmopower-jax" }
blackjax = { git = "https://github.com/handley-lab/blackjax", rev = "nested_sampling" }
